<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time Zone Converter</string>
    <string name="title">Select time and date to convert from</string>
    <string name="time_title">Time</string>
    <string name="date_title">Date</string>
    <string name="button_edit">Edit</string>
    <string name="time">01:01</string>
    <string name="date">01 Jan 2001</string>
    <string name="location1">Location #1</string>
    <string name="location2">Location #2</string>
    <string name="reset">Reset</string>
    
    <string name="hello">Hello timezoneconverter!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>